[project]
name = "quant_trading_flow"
version = "0.1.0"
description = "quant_trading_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "akshare>=1.17.8",
    "beautifulsoup4>=4.12.0",
    "crewai[tools]>=0.130.0,<1.0.0",
    "numpy>=2.2.6",
    "scikit-learn>=1.3.0",
    "langchain-openai>=0.1.0",
    "TA-Lib>=0.4.28",
    "lightgbm>=4.1.0",
    "optuna>=3.5.0",
    "matplotlib>=3.7.0",
    "ta>=0.11.0",
    "func-timeout>=4.0.0",
    "xgboost>=2.0.0",
]

[project.scripts]
kickoff = "quant_trading_flow.main:kickoff"
run_crew = "quant_trading_flow.main:kickoff"
plot = "quant_trading_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
